...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_create_account"
            style="@style/LongButton"
            android:background="@drawable/button_general_selector"
            android:text="@string/landing_button_create_account"
            app:layout_constraintStart_toStartOf="@id/text_welcome"
            app:layout_constraintEnd_toEndOf="@id/text_welcome"
            app:layout_constraintTop_toBottomOf="@id/text_welcome"
...
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_directto_login"
        android:text="@string/landing_button_login"
        app:layout_constraintStart_toEndOf="@id/text_login"
        app:layout_constraintTop_toTopOf="@id/text_login"
        app:layout_constraintBottom_toBottomOf="@id/text_login"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorAction"
...
