<resources>
    <string name="app_name">USClassifieds</string>

    <string name="landing_text_welcome">See what USC students are selling right now.</string>
    <string name="landing_button_create_account">Create Account</string>
    <string name="landing_text_login">Already have an account?</string>
    <string name="landing_button_login">Log In</string>

    <string name="login_text_hint_email">Email</string>
    <string name="login_text_hint_password">Password</string>

...
