...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="24dp"
                />

            <Button
                android:id="@+id/buttonSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LongButton"
                android:background="@drawable/button_general_selector"
                app:layout_constraintBottom_toBottomOf="@+id/text_profile_header"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toEndOf="@id/text_profile_label_email"
                android:textColor="@color/colorWhite"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/search_user"
                android:text="View Items Sold By You"
                style="@style/LongButton"
                android:background="@drawable/button_general_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profile_body_email"
...
